syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github";
option java_outer_classname = "JennyAdminApi";
option objc_class_prefix = "HLW";

package com.github;

service SupplierService {
  rpc create(SupplierRequest) returns (SupplierReply) {}
}

message SupplierRequest {
  string name = 1;
}

message SupplierReply {
  string id = 1;
  string name = 2;
}